# manymove

./: .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  README.md  post.txt  pyproject.toml  setup.cfg  uncrustify.cfg  uncrustify_0.72.cfg  uncrustify_0.78.cfg
manymove_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
manymove_bringup/docker/: Dockerfile.humble  Dockerfile.jazzy  Dockerfile.manymove  Dockerfile.manymove_xarm  README.md  run_manymove_container.sh  run_manymove_xarm_container.sh
manymove_bringup/launch/: bt_tools_lite_moveitcpp_fake_cpp_trees.launch.py  collision_test_movegroup.launch.py  collision_test_moveitcpp.launch.py  dual_movegroup_fake_app.launch.py  dual_movegroup_fake_cpp_trees.launch.py  dual_moveitcpp_fake_action_server.launch.py  dual_moveitcpp_fake_app.launch.py  dual_moveitcpp_fake_cpp_trees.launch.py  kinova_robotiq_movegroup_fake_cpp_trees.launch.py  kinova_robotiq_moveitcpp_fake_cpp_trees.launch.py  lite_cumotion_movegroup_fake_cpp_trees.launch.py  lite_foundationpose_movegroup_fake_cpp_trees.launch.py  lite_isaac_sim_movegroup_fake_cpp_trees.launch.py  lite_movegroup_fake_cpp_trees.launch.py  lite_movegroup_fake_py_trees.launch.py  lite_moveitcpp_fake_cpp_trees.launch.py  mixed_pipelines_lite_movegroup_fake_cpp_trees.launch.py  mixed_pipelines_lite_moveitcpp_fake_cpp_trees.launch.py  panda_cumotion_movegroup_fake_cpp_trees.launch.py  panda_movegroup_fake_cpp_trees.launch.py  panda_movegroup_fake_py_trees.launch.py  panda_moveitcpp_fake_cpp_trees.launch.py  tutorial_01.launch.py  uf850_movegroup_fake_cpp_trees.launch.py  uf850_moveitcpp_fake_cpp_trees.launch.py  ur_movegroup_fake_cpp_trees.launch.py  ur_moveitcpp_fake_cpp_trees.launch.py  xarm7_movegroup_fake_cpp_trees.launch.py  xarm7_moveitcpp_fake_cpp_trees.launch.py
manymove_bringup/manymove_bringup/: __init__.py  pipeline_utils.py  ros_compat.py
manymove_bringup/srdf/: ur_with_robotiq.srdf.xacro
manymove_bringup/test/: test_black.py  test_copyright.py  test_flake8.py  test_pep257.py
manymove_bringup/urdf/: ur_with_robotiq.xacro
manymove_cpp_trees/: .flake8  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
manymove_cpp_trees/config/: panda_launch_params.yaml
manymove_cpp_trees/launch/: bt_lite_fake.launch.py  bt_lite_fake_dual.launch.py  bt_lite_fake_dual_app.launch.py  bt_lite_real.launch.py  bt_panda_fake.launch.py
manymove_cpp_trees/src/: action_nodes_gripper.cpp  action_nodes_isaac.cpp  action_nodes_logic.cpp  action_nodes_objects.cpp  action_nodes_planner.cpp  action_nodes_signals.cpp  bt_client.cpp  bt_client_app_dual.cpp  bt_client_app_dual_test.cpp  bt_client_cumotion.cpp  bt_client_dual.cpp  bt_client_foundationpose.cpp  bt_client_isaac.cpp  bt_client_kinova.cpp  bt_client_mixed_pipelines.cpp  bt_client_panda.cpp  bt_client_panda_cumotion.cpp  bt_client_uf850.cpp  bt_client_ur.cpp  bt_client_xarm7.cpp  collision_test.cpp  hmi_service_node.cpp  tree_helper.cpp  tutorial_01.cpp  tutorial_01_complete.cpp
manymove_cpp_trees/test/: test_action_nodes_gripper.cpp  test_action_nodes_objects.cpp  test_action_nodes_signals.cpp  test_bt_converters.cpp  test_bt_integration.cpp  test_logic_nodes.cpp  test_tf_node.cpp  test_tree_helper.cpp
manymove_cpp_trees/tutorials/: tutorial_01.md
manymove_hmi/: .copyright  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
manymove_hmi/src/: app_module.cpp  default_app_hmi.cpp  hmi_gui.cpp  main.cpp  main_app.cpp  ros2_worker.cpp
manymove_hmi/test/: test_app_module.cpp  test_hmi_gui.cpp
manymove_msgs/: CMakeLists.txt  README.md  package.xml
manymove_msgs/action/: AddCollisionObject.action  AttachDetachObject.action  GetObjectPose.action  GripperCmd.action  LoadTrajController.action  MoveManipulator.action  PlanManipulator.action  RemoveCollisionObject.action
manymove_msgs/msg/: MoveManipulatorGoal.msg  MovementConfig.msg
manymove_msgs/srv/: SetBlackboardValues.srv
manymove_object_manager/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
manymove_object_manager/action/: AddCollisionObject.action  AttachDetachObject.action  CheckObjectExists.action  GetObjectPose.action
manymove_object_manager/config/: objects.yaml
manymove_object_manager/launch/: collision_spawner.launch.py  object_manager.launch.py
manymove_object_manager/meshes/: unit_tube.stl
manymove_object_manager/src/: collision_spawner.cpp  object_manager_main.cpp  object_manager_node.cpp
manymove_object_manager/test/: fake_planning_scene_server.cpp  fake_planning_scene_server.hpp  test_object_manager_node.cpp
manymove_planner/: .flake8  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg
manymove_planner/action/: ExecuteTrajectory.action
manymove_planner/config/: isaac_ros_cumotion_planning.yaml  micpp_demo.rviz  micpp_demo_dual.rviz  micpp_demo_dual_app.rviz  moveit_cpp.yaml  moveit_cpp_cumotion.yaml  moveit_cpp_real_L_ufactory.yaml  moveit_cpp_real_M_ufactory.yaml  moveit_cpp_real_R_ufactory.yaml  moveit_cpp_real_ufactory.yaml  sensors_3d.yaml  xarm_user_params.yaml
manymove_planner/launch/: _lite_cumotion_moveitcpp_fake_cpp_trees.launch.py  _lite_mixed_fake_cpp_trees.launch.py  _pilz_test.py  collision_test.launch.py  collision_test_movegroup.launch.py  collision_test_moveitcpp.launch.py  dual_micpp_fake_action_server.launch.py  dual_micpp_fake_app.launch.py  dual_micpp_fake_cpp_trees.launch.py  dual_movegroup_app.launch.py  dual_movegroup_fake_app.launch.py  dual_movegroup_fake_cpp_trees.launch.py  dual_movegroup_realmove_action_server.launch.py  dual_movegroup_realmove_app.launch.py  dual_moveitcpp_fake_action_server.launch.py  dual_moveitcpp_fake_app.launch.py  dual_moveitcpp_fake_cpp_trees.launch.py  dual_moveitcpp_realmove_action_server.launch.py  dual_moveitcpp_realmove_app.launch.py  lite_cumotion_movegroup_fake_cpp_trees.launch.py  lite_cumotion_moveitcpp_fake_cpp_trees.launch.py  panda_action_server_node.launch.py  (+18 more)
manymove_py_trees/: .flake8  .pydocstyle  package.xml  setup.cfg  setup.py
manymove_signals/: CMakeLists.txt  README.md  package.xml
(+96 files in other folders)
