[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------
# Python formatting and linting according to ROS 2 code-style guide
# -------------------------------------------------------------------

[tool.ruff]
# General settings
line-length = 100

# Linting rules
lint.select = ["E", "F", "Q"]
lint.ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black-style slicing)
]
lint.fixable = ["ALL"]

# Quote and formatting style
format.quote-style = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.docstring-quotes = "double"

# -------------------------------------------------------------------
# isort-compatible import sorting
# -------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
force_single_line = true
multi_line_output = 3
include_trailing_comma = true

# Make ROS 2 packages appear before yaml
known_first_party = ["manymove"]
known_third_party = [
    "ament_index_python",
    "rclpy",
    "launch",
    "launch_ros",
    "uf_ros_lib"
]

# Ensure sorting sections are explicit (so yaml ends up after ament_index_python)
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "FIRSTPARTY"

# -------------------------------------------------------------------
# Ruff’s built-in isort mirror (keeps Ruff and isort in sync)
# -------------------------------------------------------------------
[tool.ruff.isort]
known-first-party = ["manymove"]
known-third-party = [
    "ament_index_python",
    "rclpy",
    "launch",
    "launch_ros",
    "uf_ros_lib"
]
