<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manymove_hmi</name>
  <version>0.1.0</version>
  <description>Interface to control execution of manymove behaviortree packages</description>
  <maintainer email="pastoriomarco@gmail.com">Marco Pastorio</maintainer>
  <license>BSD-3-Clause</license>
  <author email="pastoriomarco@gmail.com">Marco Pastorio</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>manymove_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>qtbase5-dev</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
